[metadata]
name = j2py
description = Library for translating JSON Schema into Pydantic
long_description = file: README.md
long_description_content_type = text/markdown
author = Paulina Lewandowska
author_email = plewandowska@iitis.pl
license = MIT
url = https://github.com/plewandowska777/j2py
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
[options]
packages = find:
python_requires = >= 3.8
install_requires =
	numpy >= 1.22.1
	scipy >= 1.8.0
[options.extras_require]
test = pytest>=6.1.2; pytest-mock>=3.3.1; pytest-cov>=2.12.1
dev = flake8>=4.0.1; black>=21.12b0; isort>=5.10.1

[options.packages.find]
exclude = tests
